fix image width on small screen

--- a/cc/assets/style.css
+++ b/cc/assets/style.css
@@ -190,7 +190,9 @@ header {
 	font-size: 1rem;
 	color: #525252;
 }
-
+.box-body img {
+	max-width: 100%;
+}
 .box-body .see-more {
 	font-size: 0.85rem;
 	display: inline-block;
